lab1/Test/L1-A-12-7.output
Error Type B at Line 1
Error Type B at Line 6
Error Type B at Line 13
Error Type A at Line 26
Error Type B at Line 37
Error Type A at Line 47
Error Type A at Line 54
Error Type A at Line 57
