lab1/Test/L1-A-12-7.cmm
float etorsh7FubMhQV7wq_Fy ( int U2ijmbXCDz5w [ ] 
  ) {
}
struct uBHJat Y 

int ;
int jq5lkDLri_TMC , LX 

;
struct YkJTdQQJycY00WbWFqxd {
  struct M4UpOLxQRsFo6LW Yhj3hm5J9DTbtI = ePZG61NqeXJVz6X 
    - YSXxDALy1_z25kFe80R2 * vd7CFYPo5CpadiYN ( cgEFiuJYs9 
    = Emwo75Ko3gte8_zE9LBY || yFY && S < p725lNh0V / [ 
    p74 || t9Jy38FRc1Z4Onx_f >= R [ IKyRYhzCwK && QvFK8 
    > BL [ XY = KdzWC0KYCACFDH4 || vX8ZdC0 && VmGSQY != 
    IynvIi / mNIWHt7jN6 [ TZ <= ! ! ( ffSOROQwqTM95z0yY 
    / ejVMkhpJzsjt5 [ Pp9p9r6VGuDr6iliR7j != ! mSVC [ 
    SNnwido23eRLP4N2dE = J88OwaS0 < NmnCB9uhbaB68 / ( 
    UnLxMKTHJx + ( a_St9r6p2_S - P * DETimDyf46ldPG ( 
    LQ0fdP6 , K1i6_sb ) ) ) [ ! - ooN402wQyr || Tt < jCqZu39Kb6u7Ou6 
    || l1d_dLFCvtOeg . oHrukT6uXtb5bGxw / - - ( - N0yuM 
    ) ] * ! njNzfltIL7Bar && ! 1555265086.603002312 ] 
    ] ) ] ] ] - ! ppIFUy_pFNt8K2 . Y2xIhYeE7MXe9pS98e 
    == krWQ6VK ( ) ] + ! - 2089874462 ) , jy ;
};
'int ;
struct T03J5OT28cWF BJCP79YUtjT_3bk8TK ( ) {
  struct s6OglM3yFSMN DghI8TqJqXV ;
  if ( bnOfTAAJUVb21lE )   return DX7Cmofd ;
else   if ( IrJRgPCPBVMy )   while ( AUpjMGZjZJc ) 
    {
  }


}
int ;
int l ( {
  eFgZ ;
  A5PwyPOLHvATNffYU ;
  HIPNtIowk54Ju4 ;
  if ( XPeva )   RkE ;
else   TzDVR695 ;

  wf6VGwglusDFAZ ;
}
struct {
}`;
int qULwpPmYpxQt 
;
int ;
int ;
int ;
int ;
int Qwh0C ( int uz0OUPue6UXe2s , int GBs6VyS_ON1 $
  ) {
}
#